--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Here rules ByteCommander
+<head>
+  
+</head>
+<body>
+  <h>Homepage of ByteCommander</h>
+  <p>Here will the new homepage of ByteCommander develop.</p>
+  <p>Sorry, but at the moment, there is not much to see yet.</p>
+  <p>You may want to visit the <a href="https://ByteCommander.github.io/AboutMe.html">About Me</a> though...</p>
+</body>
