--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
 </head>
 <body>
-  <h>Homepage of ByteCommander</h>
+  <h1>Homepage of ByteCommander</h1>
   <p>Here will the new homepage of ByteCommander develop.</p>
   <p>Sorry, but at the moment, there is not much to see yet.</p>
   <p>You may want to visit the <a href="https://ByteCommander.github.io/AboutMe.html">About Me</a> though...</p>
