--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,7 +1,7 @@
 <head>
 </head>
 <body>
-  <h2>My name is <b><a href="https://ByteCommander.github.io/Index.html">ByteCommander</a></b></h2>
+  <h2>My name is <b><a href="https://ByteCommander.github.io">ByteCommander</a></b></h2>
   <p>I am 18 years old and live in Germany, in Baden-Württemberg to be a bit more precise.<br>
   Which city? Sorry, I won't tell you... ;)</p>
   <p>When I am not busy with school, I love programming and everything else about IT.<br>
