--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,8 +2,7 @@
 </head>
 <body>
   <h2>My name is <b><a href="https://ByteCommander.github.io">ByteCommander</a></b></h2>
-  <p>I am 18 years old and live in Germany, in Baden-Württemberg to be a bit more precise.<br>
-  Which city? Sorry, I won't tell you... ;)</p>
-  <p>When I am not busy with school, I love programming and everything else about IT.<br>
+  <p>I am 19 years old and live somewhere in the south of Germany.</p>
+  <p>I love programming and everything else around IT.<br>
   Further hobbies are listening to music (Metal, Rock or Classic usually) and playing chess.</p>
 </body>
