--- a/index.html
+++ b/index.html
@@ -6,4 +6,22 @@
   <p>Here will the new homepage of ByteCommander develop.</p>
   <p>Sorry, but at the moment, there is not much to see yet.</p>
   <p>You may want to visit the <a href="https://ByteCommander.github.io/AboutMe.html">About Me</a> though...</p>
+  <a href="http://stackexchange.com/users/5612515">
+    <img src="http://stackexchange.com/users/flair/5612515.png?theme=clean" 
+         width="208" height="58" 
+         alt="profile for Byte Commander on Stack Exchange, a network of free, community-driven Q&amp;A sites" 
+         title="profile for Byte Commander on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+  </a>
+  <a href="http://stackexchange.com/users/5612515">
+    <img src="http://stackexchange.com/users/flair/5612515.png" 
+         width="208" height="58" 
+         alt="profile for Byte Commander on Stack Exchange, a network of free, community-driven Q&amp;A sites" 
+         title="profile for Byte Commander on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+  </a>
+  <a href="http://stackexchange.com/users/5612515">
+    <img src="http://stackexchange.com/users/flair/5612515.png?theme=dark" 
+         width="208" height="58" 
+         alt="profile for Byte Commander on Stack Exchange, a network of free, community-driven Q&amp;A sites" 
+         title="profile for Byte Commander on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+  </a>
 </body>
