fix typo in link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <h1>Homepage of ByteCommander</h1>
   <p>Here will the new homepage of ByteCommander develop.</p>
   <p>Sorry, but at the moment, there is not much to see yet.</p>
-  <p><strong><a href="https://ByteCommander.github.io/reults.html">
+  <p><strong><a href="https://ByteCommander.github.io/result.html">
       Except the Ask Ubuntu 2016 moderator election results, of course</a></strong></p>
   <p>You may want to visit the <a href="https://ByteCommander.github.io/AboutMe.html">About Me</a> though...</p>
   <a href="http://stackexchange.com/users/5612515">
