--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 </head>
 <body>
   <h1>Homepage of ByteCommander</h1>
-  <p>Here will the new homepage of ByteCommander develop.</p>
-  <p>Sorry, but at the moment, there is not much to see yet.</p>
-  <p><strong><a href="https://ByteCommander.github.io/result.html">
-      Except the Ask Ubuntu 2016 moderator election results, of course</a></strong></p>
-  <p>You may want to visit the <a href="https://ByteCommander.github.io/AboutMe.html">About Me</a> though...</p>
+  <p>One day or another, I might possibly put something interesting or useful here.</p>
+  <p>Unfortunately this has not happened yet, so there's not really much to see.</p>
+  <p><a href="https://ByteCommander.github.io/result.html">
+      Ask Ubuntu 2016 moderator election results</a></p>
   <a href="http://stackexchange.com/users/5612515">
     <img src="http://stackexchange.com/users/flair/5612515.png" 
          width="208" height="58" 
